<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">

     <TextView android:id="@+id/jump_sequence"
         android:text="@string/JumpSequence"
         android:textSize="16sp"
         android:textStyle="bold"
         android:width="20dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>

     <TextView android:id="@+id/jump_date"
         android:text="@string/JumpDate"
         android:textSize="16sp"
         android:width="75dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     
      <TextView android:id="@+id/jump_time"
         android:text="@string/JumpTime"
         android:textSize="16sp"
         android:width="75dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     
     <TextView android:id="@+id/jump_air"
         android:text="@string/JumpAir"
         android:textSize="16sp"
         android:width="60dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
          
     <TextView android:id="@+id/jump_distance"
         android:text="@string/JumpDistance"
         android:textSize="16sp"
         android:width="60dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
               
     <TextView android:id="@+id/jump_drop"
         android:text="@string/JumpDrop"
         android:textSize="16sp"
         android:width="60dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
                    
     <TextView android:id="@+id/jump_height"
         android:text="@string/JumpHeight" 
         android:textSize="16sp"
         android:width="60dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     
 </LinearLayout>
