<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">

     <TextView android:id="@+id/run_sequence"
         android:text="@string/RunSequence"
         android:textSize="16sp"
         android:textStyle="bold"
         android:width="20dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>

     <TextView android:id="@+id/run_start"
         android:text="@string/RunStart"
         android:textSize="16sp"
         android:width="60dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     
     <TextView android:id="@+id/run_averagespeed"
         android:text="@string/RunAvgSpeed"
         android:textSize="16sp"
         android:width="80dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
          
     <TextView android:id="@+id/run_maxspeed"
         android:text="@string/RunMaxSpeed"
         android:textSize="16sp"
         android:width="80dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
               
     <TextView android:id="@+id/run_distance"
         android:text="@string/RunDistance"
         android:textSize="16sp"
         android:width="70dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
                    
     <TextView android:id="@+id/run_vertical"
         android:text="@string/RunVertical" 
         android:textSize="16sp"
         android:width="70dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     
 </LinearLayout>

    


